--- a/package.json
+++ b/package.json
@@ -1,34 +1,24 @@
 {
-  "main": "index.js",
+  "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "android": "react-native run-android",
-    "ios": "react-native run-ios",
+    "start": "expo start",
+    "android": "expo start --android",
+    "ios": "expo start --ios",
     "web": "expo start --web",
-    "start": "react-native start",
-    "test": "jest"
+    "eject": "expo eject"
   },
   "dependencies": {
-    "expo": "~38.0.9",
-    "expo-splash-screen": "^0.5.0",
-    "expo-status-bar": "^1.0.0",
-    "expo-updates": "~0.2.10",
-    "react": "~16.11.0",
-    "react-dom": "~16.11.0",
-    "react-native": "~0.62.2",
-    "react-native-gesture-handler": "~1.6.1",
-    "react-native-reanimated": "~1.9.0",
-    "react-native-screens": "~2.9.0",
-    "react-native-unimodules": "~0.10.1",
-    "react-native-web": "~0.11.7"
+    "expo": "~36.0.0",
+    "react": "~16.9.0",
+    "react-dom": "~16.9.0",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.0.tar.gz",
+    "react-native-web": "~0.11.7",
+    "react-native-paper": "3.1.1",
+    "react-native-snap-carousel": "3.8.4"
   },
   "devDependencies": {
-    "@babel/core": "~7.9.0",
-    "babel-jest": "~25.2.6",
-    "jest": "~25.2.6",
-    "react-test-renderer": "~16.11.0"
-  },
-  "jest": {
-    "preset": "react-native"
+    "babel-preset-expo": "~8.0.0",
+    "@babel/core": "^7.0.0"
   },
   "private": true
 }
